--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,9 @@ bind-key ` send-prefix
 
 set -g mouse on
 
+set -g base-index 1
+setw -g pane-base-index 1
+
 set-window-option -g mode-keys vi
 set-option -g focus-events on
 set-option -sg escape-time 10
