--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,18 +1,20 @@
 - defaults:
     link:
       relink: true
+      force: true
 
 - clean: ['~']
 
 - create:
     - ~/.config/alacritty
+    - ~/.config/nvim
 
 - link:
     ~/.zshrc: .zshrc
-    ~/.tmux.conf: tmux.conf
+    ~/.tmux.conf: .tmux.conf
     ~/.gitconfig: .gitconfig
     ~/.config/alacritty/alacritty.toml: alacritty.toml
-    ~/.config/nvim/init.lua: alacritty.toml
+    ~/.config/nvim/init.lua: init.lua
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
