--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,11 @@ set-option -g default-shell "/usr/bin/zsh"
 set-option -g default-terminal "screen-256color"
 set -ga terminal-overrides ',screen:RGB'
 
+# Yazi
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
+
 unbind C-b
 set-option -g prefix `
 bind-key ` send-prefix
