clean broken links + alacritty migrate

--- a/alacritty.toml
+++ b/alacritty.toml
@@ -1,4 +1,3 @@
-live_config_reload = true
 
 [colors.bright]
 black = "#767676"
@@ -89,7 +88,7 @@ mods = "Control"
 history = 10000
 multiplier = 3
 
-[shell]
+[terminal.shell]
 program = "/usr/bin/zsh"
 
 [window]
@@ -105,3 +104,8 @@ instance = "Alacritty"
 [window.dimensions]
 columns = 150
 lines = 40
+
+[general]
+live_config_reload = true
+
+[terminal]
